fix: apaguei um caractere errado

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
           >CONHECER O PROGRAMA</a
         >
       </div>
-    </section>ß
+    </section>
     <section class="container my-4">
       <div class="hero-banner rounded-4 overflow-hidden position-relative">
         <img
