Ajustes de resposnsividade

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link href="css/tokens.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body class="bg-body">
     <header class="shadow-sm bg-white">
