--- a/pages/box-swift.html
+++ b/pages/box-swift.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Swift — Pontos</title>
 
-   <link href="../css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -20,11 +20,11 @@
           <a href="../index.html" class="navbar-brand p-0 me-auto me-lg-0">
             <img src="../img/banners/swift logo 1.png" alt="Swift" width="96" />
           </a>
-  <button class="store-chip" id="btnStore" type="button">
+          <button class="store-chip" id="btnStore" type="button">
             Swift - Oscar Freire<br />
             <span class="cep">CEP: 01426-000</span>
           </button>
-  <form
+          <form
             class="flex-grow-1 d-none d-md-flex"
             role="search"
             onsubmit="return false;"
@@ -52,7 +52,7 @@
               </button>
             </div>
           </form>
-    <div class="d-flex align-items-center gap-2 ms-auto">
+          <div class="d-flex align-items-center gap-2 ms-auto">
             <a
               href="./login.html"
               class="btn btn-outline-soft d-flex align-items-center gap-2"
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-   <nav class="border-top border-bottom bg-white">
+      <nav class="border-top border-bottom bg-white">
         <div class="container">
           <div class="categories scroller-x py-2">
             <a href="./produtos.html" class="cat-item">
@@ -186,41 +186,65 @@
         </div>
       </nav>
     </header>
-<main>
-  <section class="mb-5">
-    <div class="hero-banner rounded-4 overflow-hidden position-relative">
-      <img src="../img/banners/banner-box.png" alt="Banner do SwiftBox com uma caixa de produtos" class="w-100">
-    </div>
-  </section>
+    <main>
+      <section class="mb-5">
+        <div class="hero-banner rounded-4 overflow-hidden position-relative">
+          <img
+            src="../img/banners/banner-box.png"
+            alt="Banner do SwiftBox com uma caixa de produtos"
+            class="w-100"
+          />
+        </div>
+      </section>
 
-  <section class="container mb-5 text-center">
-    <img src="../img/banners/passoapasso-box-swift.png" alt="Passo a passo do SwiftBox" class="img-fluid shadow-sm rounded-3">
-  </section>
-  <section class="container mb-5">
-    <div class="row g-4 align-items-stretch">
-      <div class="col-md-6">
-        <img src="../img/banners/balao-box.png" class="img-fluid rounded-3 shadow-sm h-100" alt="Caixa do SwiftBox com paraquedas">
-      </div>
-      <div class="col-md-6">
-        <img src="../img/banners/familia-feliz-box.png" class="img-fluid rounded-3 shadow-sm h-100" alt="Família feliz abrindo a caixa do SwiftBox">
-      </div>
-    </div>
-  </section>
-  
-  <!-- Bloco 4: Card Laranja de Call-to-Action -->
-  <section class="container mb-5">
-    <div class="card border-0 text-white text-center d-flex justify-content-center rounded-3 shadow-sm" style="background-color: var(--brand);">
-      <div class="card-body p-4 p-md-5">
-        <h2 class="h3 fw-bold mb-4 font-heading-condensed">Mais sabor e carinho na sua mesa, todo mês.<br>Sua família merece esse cuidado. Assine agora!</h2>
-        <a href="./login.html" class="btn btn-swiftbox-signup">Assinar o SwiftBox</a>
-      </div>
-    </div>
-  </section>
-</main>
- 
+      <section class="container mb-5 text-center">
+        <img
+          src="../img/banners/passoapasso-box-swift.png"
+          alt="Passo a passo do SwiftBox"
+          class="img-fluid shadow-sm rounded-3"
+        />
+      </section>
+      <section class="container mb-5">
+        <div class="row g-4 align-items-stretch">
+          <div class="col-md-6">
+            <img
+              src="../img/banners/balao-box.png"
+              class="img-fluid rounded-3 shadow-sm h-100"
+              alt="Caixa do SwiftBox com paraquedas"
+            />
+          </div>
+          <div class="col-md-6">
+            <img
+              src="../img/banners/familia-feliz-box.png"
+              class="img-fluid rounded-3 shadow-sm h-100"
+              alt="Família feliz abrindo a caixa do SwiftBox"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- Bloco 4: Card Laranja de Call-to-Action -->
+      <section class="container mb-5">
+        <div
+          class="card border-0 text-white text-center d-flex justify-content-center rounded-3 shadow-sm"
+          style="background-color: var(--brand)"
+        >
+          <div class="card-body p-4 p-md-5">
+            <h2 class="h3 fw-bold mb-4 font-heading-condensed">
+              Mais sabor e carinho na sua mesa, todo mês.<br />Sua família
+              merece esse cuidado. Assine agora!
+            </h2>
+            <a href="./login.html" class="btn btn-swiftbox-signup"
+              >Assinar o SwiftBox</a
+            >
+          </div>
+        </div>
+      </section>
+    </main>
+
     <footer class="footer-swift text-light">
       <div class="container">
-       <div class="footer-top">
+        <div class="footer-top">
           <div class="f-col">
             <img
               src="../img/banners/swift logo 1.png"
@@ -241,8 +265,7 @@
               </div>
             </div>
           </div>
-
-    <div class="f-col">
+          <div class="f-col">
             <p class="f-heading">Fale conosco</p>
 
             <div class="f-item">
@@ -281,7 +304,6 @@
               </div>
             </div>
           </div>
-
           <div class="f-col">
             <p class="f-heading">Ajuda e Informações</p>
             <ul class="f-links">
@@ -291,7 +313,7 @@
             </ul>
           </div>
 
-         <div class="f-col">
+          <div class="f-col">
             <p class="f-heading">Sua Compra</p>
             <ul class="f-links">
               <li><a href="#">Seus Pedidos</a></li>
@@ -301,7 +323,7 @@
               <li><a href="#">Encarte Digital</a></li>
             </ul>
           </div>
-   <div class="f-col">
+          <div class="f-col">
             <p class="f-heading">Institucional</p>
             <ul class="f-links">
               <li><a href="#">Nossa história</a></li>
@@ -309,7 +331,8 @@
               <li><a href="#">Sustentabilidade</a></li>
             </ul>
           </div>
-       <div class="footer-cta">
+        </div>
+        <div class="footer-cta">
           <a
             href="https://wa.me/551140208558"
             target="_blank"
@@ -358,7 +381,7 @@
             </p>
           </div>
         </div>
- <div class="footer-bottom">
+        <div class="footer-bottom">
           <div class="socials">
             <a href="#" aria-label="Instagram"
               ><img src="../img/icones/Icone Instagram.png" alt=""
