--- a/pages/index-logado.html
+++ b/pages/index-logado.html
@@ -569,7 +569,7 @@
           alt="Programa de Swiftbox"
           class="w-100 d-md-none"
         />
-        <a href="./box-swift.htmlß" class="btn btn-cta btn-programa"
+        <a href="./box-swift.html" class="btn btn-cta btn-programa"
           >CONHECER O SWIFTBOX</a
         >
       </div>
